Add Server Requests

--- a/SampleChatApp/Base.lproj/Main.storyboard
+++ b/SampleChatApp/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Sg-27-Tcv">
-                                <rect key="frame" x="89" y="319" width="142" height="30"/>
+                                <rect key="frame" x="95" y="85" width="142" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Not Registered Yet ?">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -64,7 +64,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="51O-tw-7zP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="29" y="-2251"/>
+            <point key="canvasLocation" x="-417" y="-2583"/>
         </scene>
         <!--Sign Up View Controller - Sign Up-->
         <scene sceneID="aBB-Md-hK5">
@@ -115,7 +115,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wq2-kW-dAg">
-                                <rect key="frame" x="137" y="285" width="49" height="30"/>
+                                <rect key="frame" x="135" y="81" width="49" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -136,7 +136,36 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AVu-cT-xt0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="457" y="-2251"/>
+            <point key="canvasLocation" x="11" y="-2583"/>
+        </scene>
+        <!--Table View Controller - Friends-->
+        <scene sceneID="qgI-mp-EhA">
+            <objects>
+                <tableViewController storyboardIdentifier="Friends_Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QBd-lA-2wA" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="SAr-fj-q5l">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="b7r-xm-WXM">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b7r-xm-WXM" id="AIH-8Z-bQU">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="QBd-lA-2wA" id="jBS-II-HG2"/>
+                            <outlet property="delegate" destination="QBd-lA-2wA" id="gLc-x7-XNu"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Friends" id="vWf-Oz-LqZ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gk9-15-SNv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-375" y="-1891"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dSW-VH-GFI">
@@ -154,7 +183,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l8n-al-ZKQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-430" y="-2245"/>
+            <point key="canvasLocation" x="-876" y="-2577"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1bT-zI-e91">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="N2l-Lv-i71" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QGl-qC-Z8a">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="QBd-lA-2wA" kind="relationship" relationship="rootViewController" id="lsD-8l-x3D"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hNA-kO-UhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-861" y="-1891"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
