--- a/SampleChatApp/Base.lproj/Main.storyboard
+++ b/SampleChatApp/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
                         <viewControllerLayoutGuide type="bottom" id="aMY-d0-KQc"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="qlx-u4-ibB">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email : " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWN-eZ-oce">
@@ -29,7 +29,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qsb-na-af2">
-                                <rect key="frame" x="136" y="245" width="49" height="30"/>
+                                <rect key="frame" x="20" y="85" width="49" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -82,7 +82,7 @@
                         <viewControllerLayoutGuide type="bottom" id="lb8-1d-jYN"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8AJ-BU-Ogg">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email : " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zf-7v-xh7">
@@ -145,22 +145,26 @@
             </objects>
             <point key="canvasLocation" x="11" y="-2583"/>
         </scene>
-        <!--Table View Controller - Friends-->
+        <!--Friends List Table View Controller - Friends-->
         <scene sceneID="qgI-mp-EhA">
             <objects>
-                <tableViewController storyboardIdentifier="Friends_Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QBd-lA-2wA" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gk9-15-SNv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController storyboardIdentifier="Friends_Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QBd-lA-2wA" customClass="FriendsListTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="SAr-fj-q5l">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Friend_List" id="b7r-xm-WXM">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FontCell" id="b7r-xm-WXM">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b7r-xm-WXM" id="AIH-8Z-bQU">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="ILN-gc-n2X" kind="push" identifier="FriendChat" id="1bl-O5-sPB"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -170,9 +174,62 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Friends" id="vWf-Oz-LqZ"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gk9-15-SNv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-375" y="-1891"/>
+            <point key="canvasLocation" x="313" y="-1898"/>
+        </scene>
+        <!--Chat View Controller-->
+        <scene sceneID="aqM-ab-mei">
+            <objects>
+                <viewController id="ILN-gc-n2X" customClass="ChatViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rNO-HI-KGU"/>
+                        <viewControllerLayoutGuide type="bottom" id="wil-Sh-ril"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Im5-GA-KfO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="2BT-Fx-Xpp">
+                                <rect key="frame" x="0.0" y="82" width="320" height="335"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IMk-9W-gWZ">
+                                <rect key="frame" x="0.0" y="430" width="321" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nyy-n3-2TC">
+                                        <rect key="frame" x="15" y="11" width="202" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oqi-xK-r53">
+                                        <rect key="frame" x="238" y="11" width="63" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Send">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendButtonAction:" destination="ILN-gc-n2X" eventType="touchUpInside" id="ETP-Jk-cll"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="5xb-S2-RvN"/>
+                    <connections>
+                        <outlet property="chatTableView" destination="2BT-Fx-Xpp" id="xdS-jo-7nL"/>
+                        <outlet property="footerView" destination="IMk-9W-gWZ" id="T4d-81-DyI"/>
+                        <outlet property="messageTextField" destination="nyy-n3-2TC" id="PXz-lJ-QIx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bmh-bf-Qrz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="746" y="-1889"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dSW-VH-GFI">
@@ -193,27 +250,27 @@
             <point key="canvasLocation" x="-876" y="-2577"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="1bT-zI-e91">
+        <scene sceneID="WUV-ys-3tA">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="N2l-Lv-i71" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="X7G-SV-cJ0" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QGl-qC-Z8a">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4iL-qu-V8D">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="QBd-lA-2wA" kind="relationship" relationship="rootViewController" id="lsD-8l-x3D"/>
+                        <segue destination="QBd-lA-2wA" kind="relationship" relationship="rootViewController" id="oSs-Ko-8ZS"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hNA-kO-UhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hye-jM-nbb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-861" y="-1891"/>
+            <point key="canvasLocation" x="-114" y="-1898"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
